--- a/releases/dev/podinfo.yaml
+++ b/releases/dev/podinfo.yaml
@@ -10,11 +10,9 @@ metadata:
 spec:
   releaseName: podinfo-dev
   chart:
-    git: git@github.com:stefanprodan/gitops-helm
+    git: git@github.com:fluxcd/helm-operator-get-started
     path: charts/podinfo
     ref: master
   values:
-    image: stefanprodan/podinfo:dev-hdtwcel9
-    replicaCount: 1
-    hpa:
-      enabled: false
+    image: stefanprodan/podinfo:dev-kb9lm91e
+    replicaCount: 3
